--- a/vignettes/gtfs2emis_fleet_data.Rmd
+++ b/vignettes/gtfs2emis_fleet_data.Rmd
@@ -73,7 +73,7 @@ Now here are a few examples of `data.frames` with the fleet characteristics requ
 
 ## 4.1 Brazil: Environmental Company of Sao Paulo (CETESB):
 
-Based on the [2019 data](https://cetesb.sp.gov.br/veicular/relatorios-e-publicacoes/) from the emission factor model of CETESB.
+Based on the 2019 data from the emission factor model of CETESB.
 
 
 ```{r, message = FALSE}
